killing some performance related findbug issues to stop myself going insane while listening to a telco